--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,15 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/css/style.css">
-  </head>
+<!DOCTYPE html>
+<html>
+
+  {% include head.html %}
+  
   <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/blog/">Blog</a>
-    </nav>
-    <h1>{{ page.title }}</h1>
-    <section>
-      {{ content }}
-    </section>
-    <footer>
-      &copy; to me
-    </footer>
+	<div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
+
   </body>
+
 </html>
