--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,21 +2,10 @@
   <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
     tex2jax: {
-      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      inlineMath: [['$','$'], ['\\(','\\)']],
       processEscapes: true
     }
   });
   </script>
-  <script
-    type="text/javascript"
-    charset="utf-8"
-    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
-  >
-  </script>
-  <script
-    type="text/javascript"
-    charset="utf-8"
-    src="https://vincenttam.github.io/javascripts/MathJaxLocal.js"
-  >
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 </head>
